--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.0.0",
     "react-i18next": "^15.4.1",
+    "react-icons": "^5.5.0",
     "react-router": "^7.5.1",
     "styled-components": "^6.1.17"
   },
